[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://entities/ship_sample.gd" type="Script" id=2]

[node name="ship_sample" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="s_type" type="OptionButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 770.0
margin_top = 250.0
margin_right = 880.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Ship Type"
flat = false
align = 0
items = [  ]
selected = -1

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 770.0
margin_top = 280.0
margin_right = 827.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Rotation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="s_rotation" type="HSlider" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 770.0
margin_top = 300.0
margin_right = 880.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 7.0
step = 1.0
page = 0.0
value = 3.0
exp_edit = false
rounded = false
editable = true
tick_count = 8
ticks_on_borders = true
focus_mode = 2

[node name="ship_area" type="Node2D" parent="." index="3"]

position = Vector2( 390, 290 )

[connection signal="item_selected" from="s_type" to="." method="_on_s_type_item_selected"]

[connection signal="value_changed" from="s_rotation" to="." method="_on_s_rotation_value_changed"]


